# Library-Management-With-wxWidget

./: CMakeLists.txt  README.md
Core/: App.cpp  App.hpp  MainFrame.cpp  MainFrame.hpp  ParentFrameInterface.cpp  ParentFrameInterface.hpp
Dashboard/: AdminDashboard.cpp  AdminDashboard.hpp  UserDashboard.cpp  UserDashboard.hpp
Data/: Data.cpp  Data.hpp  books_text.txt  students_text.txt
Data_Models/: Book.cpp  Book.hpp  User.cpp  User.hpp
Utility/: Utility.cpp  Utility.hpp
